# rustical-bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  real.db
data/: 472069345569144843.db  472069345569144843_assignment.db  472069345569144843_close.db  472069345569144843_open.db  cool.csv  logs.db  real.db  test.db  translations.db
data/jokes/: alljokes.md  jokesandremarks.md
data/options/: 472069345569144843.db
data/stars/: brawlers.csv  matchups.csv
jokes/: alljokes.md  jokesandremarks.md
src/: main.rs  types.rs  utils.rs
src/bot/: on_message.rs
src/commands/: add_option_data.rs  clear.rs  edit_option_data.rs  joke.rs  logs.rs  mod.rs  modal.rs  option_settings.rs  query_option.rs  realtime.rs  remark.rs  say.rs  stratagem.rs  translate.rs  translate_list.rs  view_open.rs  view_option.rs
src/commands/options/: mod.rs
src/commands/options/add/: assign.rs  close.rs  expire.rs  mod.rs  open.rs  roll.rs  split.rs
src/commands/options/edit/: date.rs  edit.rs  mod.rs
src/commands/options/query/: best.rs  mod.rs  month.rs  stats.rs
src/commands/options/view/: all.rs  assets.rs  details.rs  mod.rs  view.rs
src/commands/stars/: matchup.rs
src/events/: awake.rs  handler.rs  message.rs  mod.rs  on_awake.rs  on_message.rs
src/types/: contract.rs  dblog.rs  mod.rs  option.rs  position.rs  positionmonth.rs  tradingmonth.rs  translation.rs  types.rs
src/utils/: bot.rs  db.rs  env.rs  log.rs  mod.rs  paginate_cool.rs  translations.rs
